k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-app-deployment
  labels:
    app: welcome-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: welcome-app
  template:
    metadata:
      labels:
        app: welcome-app
    spec:
      containers:
      - name: welcome-app
        image: greenlemon/testing-welcome:latest
        ports:
          - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            memory: "256Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /welcome
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /welcome
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
