k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-app-service
  labels:
    app: welcome-app
spec:
  type: ClusterIP
  selector:
    app: welcome-app
  ports:
  - name: http
    port: 80
    targetPort: 5000
