k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - welcome.sltr.id
      secretName: welcome-app-tls
  rules:
  - host: welcome.sltr.id
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: welcome-app-service
            port: 
              number: 80
